--- a/courses/macroeconomics/macro_2/classic/index.html
+++ b/courses/macroeconomics/macro_2/classic/index.html
@@ -872,6 +872,7 @@
       </ul>
     </li>
     <li><a href="#quoi-faire-face-à-la-crise-de-1929-">Quoi faire face à la crise de 1929 ?</a></li>
+    <li><a href="#exercises">Exercises</a></li>
   </ul>
 </nav>
 
@@ -1356,6 +1357,8 @@ Ce qu&rsquo;on observe, c&rsquo;est une hausse du salaire réel : l&rsquo;offre 
 Cela explique aussi que la production diminue, et que les prix chutent, comme on le voit.</p>
 <p>Comme tout ce qu&rsquo;on observe est le résultat d&rsquo;un processus d&rsquo;optimisation individuelle qui conduit les individus à préférer travailler moins, on ne doit rien faire.
 Et en plus, si on augmentait les dépenses publiques ou l&rsquo;offre de monnaie, le seul effet serait sur des variables nominales.&rdquo;</p>
+<h2 id="exercises">Exercises</h2>
+<p><a href="/exercises/Macro_2/PS_Classics.pdf">Problem Set 1: Classiques</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
