--- a/courses/macroeconomics/macro_2/is_lm/index.html
+++ b/courses/macroeconomics/macro_2/is_lm/index.html
@@ -876,6 +876,7 @@
         <li><a href="#le-chômage">Le chômage</a></li>
       </ul>
     </li>
+    <li><a href="#exercises">Exercises</a></li>
   </ul>
 </nav>
 
@@ -1221,7 +1222,7 @@ Bien que les dépenses publiques aient un effet multiplicateur plus important à
 <div style="border: 2px solid #3498db; padding: 10px; margin: 20px;">
     <h2 style="color: #3498db; margin: 0 0 10px 0;">Cas d'étude: Les multiplicateurs dans le débat économique (Mankiw, p.322)</h2>
     <p>
-    Lorsque Barack Obama est devenu président en janvier 2009, l'économie américaine était en récession. 
+    Lorsque Barack Obama est devenu président en janvier 2009, l'économie américaine était en récession.
     Son administration proposa un important plan de relance d'environ 800 milliards de dollars, soit environ 5% du PIB annuel, pour stimuler la demande globale.
     <br>
     Le plan comprenait des réductions d'impôts et une augmentation des transferts, mais surtout une augmentation des achats de biens et services par le gouvernement.
@@ -1230,10 +1231,10 @@ Bien que les dépenses publiques aient un effet multiplicateur plus important à
     Les partisans du plan Obama arguaient que l'augmentation des dépenses était plus efficace que la réduction des impôts, car selon la théorie keynésienne standard, le multiplicateur des dépenses publiques est supérieur au multiplicateur fiscal.
     Selon les économistes de l'administration Obama, le multiplicateur des dépenses publiques était de 1,57, tandis que le multiplicateur fiscal n'était que de 0,99.
     D'autres économistes soutenaient que, malgré les prédictions des modèles keynésiens conventionnels, les stimuli fiscaux basés sur les dépenses ne sont pas aussi efficaces que les initiatives basées sur les impôts.
-    Certains économistes, comme Gary Becker, s'inquiétaient que l'utilisation des dépenses d'infrastructure pour promouvoir l'emploi puisse entrer en conflit avec l'objectif d'obtenir les infrastructures les plus nécessaires. 
+    Certains économistes, comme Gary Becker, s'inquiétaient que l'utilisation des dépenses d'infrastructure pour promouvoir l'emploi puisse entrer en conflit avec l'objectif d'obtenir les infrastructures les plus nécessaires.
     <blockquote>
         Des nouvelles dépenses d'infrastructure dans des régions déprimées comme Detroit pourrait avoir un effet stimulant important parce que ces projets de construction peuvent utiliser des travailleurs qui, aujourd'hui sont au chômage.
-        Toutefois, beaucoup de ces zones <b>sont en déclin parce qu'elles produisaient des biens et services qui ne sont pas très demandés et qui ne le seront pas à l'avenir</b>. 
+        Toutefois, beaucoup de ces zones <b>sont en déclin parce qu'elles produisaient des biens et services qui ne sont pas très demandés et qui ne le seront pas à l'avenir</b>.
         Par conséquent, la valeur ajoutée globale en améliorant leurs routes et autres infrastructures sera probablement beaucoup moins importante que si la nouvelle infrastructure était située dans des régions en croissance qui pourraient avoir relativement peu de chômage, mais qui ont une grande demande de routes, d'écoles et d'autres types d'infrastructures à long terme.
     </blockquote>
     </p>
@@ -1353,7 +1354,7 @@ Ainsi, si l&rsquo;offre d&rsquo;encaisses réels augmente, la courbe LM se dépl
     Nous pouvons le faire car:
     $\frac{M^s}{p} = \frac{2 Y}{\sqrt{r}} \implies r = \left(\frac{2 Y}{M}\right)^2.$
     <p>
-    Si l'on introduit cette expression dans $\frac{\mathrm{d}Y}{\mathrm{d} \frac{M^s}{p}} = \frac{1}{L^\prime_Y}= \frac{\sqrt{r}}{2},$ on obtient 
+    Si l'on introduit cette expression dans $\frac{\mathrm{d}Y}{\mathrm{d} \frac{M^s}{p}} = \frac{1}{L^\prime_Y}= \frac{\sqrt{r}}{2},$ on obtient
     \begin{equation}
         \frac{\mathrm{d}Y}{\mathrm{d} \frac{M^s}{p}} = \frac{\sqrt{\left(\frac{2 Y}{\frac{M^s}{p}}\right)^2}}{2}=\frac{Y}{\frac{M^s}{p}}
     \end{equation}
@@ -1398,6 +1399,8 @@ Ce point donne le taux d&rsquo;intérêt $r$ et le niveau de revenu $Y$ qui sati
 Vu qu&rsquo;avec $G,, T$ et $\frac{M^s}{p}$ le niveau de revenu (et donc, de production) est fixé, nous pouvons trouver le nombre de travailleurs à l&rsquo;aide de la fonction de production: $Y=F(\bar{K},N)$ où $Y$ et $\bar{K}$ sont connus.
 Il est donc claire que le nombre de travailleurs $N$ ne dépend plus des choix des ménages mais seulement du niveau d&rsquo;activité économique.
 Enfin, le salaire d&rsquo;équilibre assure que le nombre de travailleurs soit celui qui correspond au niveau d&rsquo;activité d&rsquo;équilibre.</p>
+<h2 id="exercises">Exercises</h2>
+<p><a href="/exercises/Macro_2/PS_ISLM.pdf">Problem Set 2: IS-LM</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
