--- a/courses/macroeconomics/macro_2/is_lm_policy/index.html
+++ b/courses/macroeconomics/macro_2/is_lm_policy/index.html
@@ -875,6 +875,7 @@
         <li><a href="#contrôle-de-déficit">Contrôle de déficit</a></li>
       </ul>
     </li>
+    <li><a href="#exercises">Exercises</a></li>
   </ul>
 </nav>
 
@@ -1245,7 +1246,7 @@ Los más de 30.000 proyectos del fondo -conocido simplemente como Plan Zapatero-
 Par exemple, en 2024 la France dépassait le niveau fixé par l&rsquo;UE en termes de déficit maximal
 <a href="https://www.publicsenat.fr/actualites/economie/procedure-de-deficit-excessif-quelles-consequences-pour-la-france" target="_blank" rel="noopener">Public Senat</a></p>
 <blockquote>
-Ce vendredi 26 juillet [2024], la Commission européenne a annoncé placer la France en procédure de déficit excessif, compte tenu du dévissage de la trajectoire des finances publiques. 
+Ce vendredi 26 juillet [2024], la Commission européenne a annoncé placer la France en procédure de déficit excessif, compte tenu du dévissage de la trajectoire des finances publiques.
 En effet avec une dette publique qui atteint 110 % du PIB et un déficit public réévalué à 5,5 % du PIB à cause d’une surestimation de la croissance, la France ne respecte pas les critères posés par le Pacte de stabilité et de croissance qui demande aux Etats membres de l’Union européenne de ne pas avoir un niveau d’endettement supérieur à 60 % du PIB et de ne pas dépasser un déficit de 3 % du PIB.
 </blockquote>
 <p>Pour rétablir l&rsquo;équilibre budgétaire, il est nécessaire de réduire $G$ ou augmenter $T$ (ou utiliser les deux simultanément).
@@ -1308,7 +1309,7 @@ Y^{eq} &amp;= 0.951459
     \end{equation}
     car
     <br>
-    $I(r) = 0.1+\frac{1}{r}\implies I^\prime=-\frac{1}{r^2}$, 
+    $I(r) = 0.1+\frac{1}{r}\implies I^\prime=-\frac{1}{r^2}$,
     <br>
     $L(Y,r)=\frac{Y}{r} \implies L^\prime_Y = \frac{1}{r}$ et $L^\prime_r = -\frac{Y}{r^2}$.
     <p>
@@ -1336,6 +1337,8 @@ Y^{eq} &amp;= 0.951459
     \end{equation}
     Le nouveau niveau de dépenses publiques devrait être de $0.5-\Delta G = 0.4742$ et le revenu de $1-1.0322 \times \Delta G = 0.97337$
 </div>
+<h2 id="exercises">Exercises</h2>
+<p><a href="/exercises/Macro_2/PS_ISLM_2.pdf">Problem Set 3: IS-LM, part 2</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
