--- a/courses/macroeconomics/macro_2/mundell-fleming/index.html
+++ b/courses/macroeconomics/macro_2/mundell-fleming/index.html
@@ -888,6 +888,7 @@
         <li><a href="#triangle-dincompatibilité-impossible-trinity">Triangle d&rsquo;incompatibilité (&ldquo;Impossible Trinity&rdquo;)</a></li>
       </ul>
     </li>
+    <li><a href="#exercises">Exercises</a></li>
   </ul>
 </nav>
 
@@ -1206,19 +1207,19 @@ Quand la BCE vent les yuans contre les euros, l&rsquo;offre monétaire se rédui
 <div style="border: 2px solid #3498db; padding: 10px; margin: 20px;">
     <h2 style="color: #3498db; margin: 0 0 10px 0;">La étalon-or</h2>
     Pendant la fin du XIXe et le début du XXe siècle, la plupart des grandes économies mondiales fonctionnaient sous l’étalon-or.
-    Chaque pays maintenait une réserve d’or et s’engageait à échanger une unité de sa monnaie contre une quantité d’or spécifiée. 
+    Chaque pays maintenait une réserve d’or et s’engageait à échanger une unité de sa monnaie contre une quantité d’or spécifiée.
     Grâce à l’étalon-or, les économies mondiales maintenaient un système de taux de change fixes.
     <br>
     Pour comprendre comment un étalon-or international fixe les taux de change, supposons que le Trésor américain soit prêt à acheter ou vendre 1 once d’or pour 100 dollars, et que la Banque d’Angleterre soit prête à acheter ou vendre 1 once d’or pour 100 livres.
-    Ensemble, ces politiques fixent le taux de change entre le dollar et la livre : 1 dollar doit s’échanger contre 1 livre. 
+    Ensemble, ces politiques fixent le taux de change entre le dollar et la livre : 1 dollar doit s’échanger contre 1 livre.
     Sinon, la loi du prix unique serait violée, et il serait profitable d’acheter de l’or dans un pays et de le vendre dans l’autre.
     <br>
-    Par exemple, supposons que le taux de change du marché soit de 2 livres par dollar. 
+    Par exemple, supposons que le taux de change du marché soit de 2 livres par dollar.
     Dans ce cas, un arbitragiste pourrait acheter 200 livres pour 100 dollars, utiliser les livres pour acheter 2 onces d’or à la Banque d’Angleterre, apporter l’or aux États-Unis et le vendre au Trésor pour 200 dollars, réalisant ainsi un profit de 100 dollars.
     De plus, en apportant l’or des États-Unis vers l’Angleterre, l’arbitragiste augmenterait la masse monétaire aux États-Unis et diminuerait la masse monétaire en Angleterre.
     <br>
-    Ainsi, pendant l’ère de l’étalon-or, le transport international de l’or par les arbitragistes était un mécanisme automatique ajustant la masse monétaire et stabilisant les taux de change. 
-    Ce système ne fixait pas complètement les taux de change, car le transport de l’or à travers l’Atlantique était coûteux. 
+    Ainsi, pendant l’ère de l’étalon-or, le transport international de l’or par les arbitragistes était un mécanisme automatique ajustant la masse monétaire et stabilisant les taux de change.
+    Ce système ne fixait pas complètement les taux de change, car le transport de l’or à travers l’Atlantique était coûteux.
     Pourtant, l’étalon-or international maintenait le taux de change dans une fourchette dictée par les coûts de transport.
     Il empêchait ainsi de grands mouvements persistants des taux de change.
 </div>
@@ -1314,7 +1315,7 @@ Cependant, il agit sur les exportations nettes: avec un taux de change plus bas,
     <h2 style="color: #3498db; margin: 0 0 10px 0;">Sortie de la crise de 1930 par la dévaluation</h2>
     La Grande Dépression des années 1930 était un problème mondial.
     Une différence clé entre les gouvernements était leur engagement envers le taux de change fixe établi par l'étalon-or international.
-    Certains pays, comme la France, l'Allemagne, l'Italie et les Pays-Bas, ont maintenu l'ancien taux de change entre l'or et la monnaie. 
+    Certains pays, comme la France, l'Allemagne, l'Italie et les Pays-Bas, ont maintenu l'ancien taux de change entre l'or et la monnaie.
     D'autres pays, comme le Danemark, la Finlande, la Norvège, la Suède et le Royaume-Uni, ont réduit la quantité d'or qu'ils paieraient pour chaque unité de monnaie d'environ 50 %.
     En réduisant la teneur en or de leurs monnaies, ces gouvernements ont dévalué leurs monnaies par rapport à celles des autres pays.
     <p>
@@ -1376,8 +1377,8 @@ Toutefois, il existe d&rsquo;autres règles de politique monétaire qui peuvent 
     Or, pendant la crise de 2008-2013, la situation différente entre les pays du nord et du sud de l'Europe a mis en évidence les limites de la politique monétaire unique.
     Avec un taux de chômage de 12.2% en Italie, 16.5% au Portugal, 26.1% en Espagne et 27.3% en Grèce, un pays avec le contrôle de sa monnaie aurait pu utiliser augmenter la masse monétaire et déprécié leurs monnaies pour rendre leurs exportations plus compétitives et amortir la récession.
     <p>
-    La raison pour laquelle la BCE n'a pas déprécié l'euro pour aider ces économies en difficulté tient à la nature même de l'Union économique et monétaire. 
-    La BCE doit concilier les intérêts de tous les pays membres de la zone euro, et non ceux d'un seul pays en particulier. 
+    La raison pour laquelle la BCE n'a pas déprécié l'euro pour aider ces économies en difficulté tient à la nature même de l'Union économique et monétaire.
+    La BCE doit concilier les intérêts de tous les pays membres de la zone euro, et non ceux d'un seul pays en particulier.
     Le conseil des gouverneurs de la BCE est composé de représentants de chacun des États membres de la zone euro, ce qui signifie que chaque décision doit être prise en tenant compte des différentes situations économiques des pays membres.
     Dans ce contexte, la BCE a souvent privilégié une politique monétaire équilibrée visant à maintenir la stabilité des prix dans l'ensemble de la zone euro, même si cela signifiait ne pas répondre pleinement aux besoins spécifiques des pays les plus touchés par la crise.
 </div>
@@ -1412,6 +1413,8 @@ Ainsi, le choix du se faire entre deux options parmi trois possibilités:</p>
 Ainsi, il ne peut pas avoir de politique monétaire indépendante.
 Si, au contraire, ce pays choisit une politique monétaire indépendante, il ne peut pas avoir un taux de change fixe.</p>
 <p>Finalement, pour avoir un taux de change fixe <em>et</em> une politique monétaire indépendante, il faut que les capitaux ne soient restreints pour permettre un taux d&rsquo;intérêt différent entre le pays et le reste du monde.</p>
+<h2 id="exercises">Exercises</h2>
+<p><a href="/exercises/Macro_2/PS_MF.pdf">Problem Set 4: Mundell-Fleming</a></p>
 <div class="footnotes" role="doc-endnotes">
 <hr>
 <ol>
