--- a/courses/international_trade/heckscher-ohlin/index.html
+++ b/courses/international_trade/heckscher-ohlin/index.html
@@ -904,7 +904,6 @@
       </ul>
     </li>
     <li><a href="#factor-prize-equalization">Factor prize equalization</a></li>
-    <li><a href="#todo">TODO:</a></li>
   </ul>
 </nav>
 
@@ -953,7 +952,7 @@ We can compute, for instance, how much dost it cost to produce 100 units of this
 <!--
 ToRadicals@
  RootReduce@
-  MinValue[{w L + r K, 100 == K^(0.8) L^(0.2), r > 0, w > 0}, {K, L}, 
+  MinValue[{w L + r K, 100 == K^(0.8) L^(0.2), r > 0, w > 0}, {K, L},
    Reals]
 
   Solution: 125 (-2)^(2/5) r^(4/5) w^(1/5)
@@ -1039,7 +1038,7 @@ p_y \frac{d \mathcal{X}}{d L_x} &amp;= w_x
 \end{align}</p>
 <details>
   <summary>Question: how can we be sure that these equations have a solution?</summary>
-  Answer: because we have decreasing marginal returns. 
+  Answer: because we have decreasing marginal returns.
 </details>
 <p>If we compute the wage-rental ratio for the xbox sector, we get an optimality condition:
 \begin{align}
@@ -1524,7 +1523,7 @@ max_{K_x,L_x} &amp;\ \pi = p_x \mathcal{X} - w L_x - r K_x \\
 p_x \frac{1}{2} K_x^{-\frac{1}{2}} L_x^\frac{1}{2} &amp;= p_y \frac{1}{3} K_y^{-\frac{2}{3}} L_y^\frac{2}{3} \\
 p_x \frac{1}{2} K_x^\frac{1}{2} L_x^{-\frac{1}{2}} &amp;= p_y \frac{2}{3} K_y^\frac{1}{3} L_y^{-\frac{1}{3}} \\
 \\
-\frac{p_x}{p_y} &amp;= \frac{\frac{1}{3} K_y^{-\frac{2}{3}} L_y^\frac{2}{3}}{\frac{1}{2} K_x^{-\frac{1}{2}} L_x^\frac{1}{2}} = \frac{2}{3}\frac{K_x^\frac{1}{2}L_y^\frac{2}{3}}{K_y^\frac{2}{3}L_x^\frac{1}{2}} = \frac{2}{3} \left(\frac{L_x}{K_x}\right)^\frac{-1}{2} \left(\frac{L_y}{K_y}\right)^\frac{2}{3} \\<br>
+\frac{p_x}{p_y} &amp;= \frac{\frac{1}{3} K_y^{-\frac{2}{3}} L_y^\frac{2}{3}}{\frac{1}{2} K_x^{-\frac{1}{2}} L_x^\frac{1}{2}} = \frac{2}{3}\frac{K_x^\frac{1}{2}L_y^\frac{2}{3}}{K_y^\frac{2}{3}L_x^\frac{1}{2}} = \frac{2}{3} \left(\frac{L_x}{K_x}\right)^\frac{-1}{2} \left(\frac{L_y}{K_y}\right)^\frac{2}{3} \\
 \frac{p_x}{p_y} &amp;= \frac{\frac{2}{3} K_y^\frac{1}{3} L_y^{-\frac{1}{3}}}{\frac{1}{2} K_x^\frac{1}{2} L_x^{-\frac{1}{2}}} = \frac{4}{3} \frac{K_y^\frac{1}{3}L_x^\frac{1}{2}}{K_x^\frac{1}{2}L_y^\frac{1}{3}} = \frac{4}{3} \left(\frac{L_x}{K_x}\right)^\frac{1}{2} \left(\frac{L_y}{K_y}\right)^\frac{-1}{3}
 \end{align}</p>
 <p>From the second we can write:
@@ -1660,16 +1659,11 @@ Indeed, as we saw before, wages and rents do <em>not</em> depend on the endowmen
 <p>We can find that equal labor-capital ratios must prevail for each sector across countries.
 This is:
 \begin{align}
-\left(\frac{L_x}{K_x}\right) &amp;= \left(\frac{L_x^}{K_x}\right)^\star \\
-\left(\frac{L_y}{K_y}\right) &amp;= \left(\frac{L_y^}{K_y}\right)^\star \\
+\left(\frac{L_x}{K_x}\right) &amp;= \left(\frac{L_x}{K_x}\right)^\star \\
+\left(\frac{L_y}{K_y}\right) &amp;= \left(\frac{L_y}{K_y}\right)^\star \\
 \end{align}</p>
 <p>Then, because $\frac{w}{r} = \frac{MPL_x}{MPK_x} = \frac{MPL_y}{MPK_y}$, and $\frac{w^\star}{r^\star} = \frac{MPL_x^\star}{MPK_x^\star} = \frac{MPL_y^\star}{MPK_y^\star}$, we have that $\frac{w}{r} = \frac{w^\star}{r^\star}$, using the previous condition we arrive at $w = w^\star$ and $r = r^\star$.
 This is, factor prices equalize.</p>
-<h2 id="todo">TODO:</h2>
-<h1 id="empirics-on-ho">Empirics on HO</h1>
-<p><a href="https://en.wikipedia.org/wiki/Heckscher%E2%80%93Ohlin_model#Features_of_the_model" target="_blank" rel="noopener">https://en.wikipedia.org/wiki/Heckscher%E2%80%93Ohlin_model#Features_of_the_model</a></p>
-<h1 id="empirics-on-stolper-samuelson">Empirics on Stolper-Samuelson</h1>
-<p><a href="https://en.wikipedia.org/wiki/Stolper%E2%80%93Samuelson_theorem" target="_blank" rel="noopener">https://en.wikipedia.org/wiki/Stolper%E2%80%93Samuelson_theorem</a></p>
 
           </div>
 
