--- a/courses/international_trade/ricardo-empirics/index.html
+++ b/courses/international_trade/ricardo-empirics/index.html
@@ -1066,13 +1066,13 @@ Another problem is that the data from GAEZ divides the world in squares of appro
 The best crop can vary within that area, so the model might not be able to capture that.</p>
 <p>All-in-all, the model does a good job at predicting the production of each country, but it is not perfect:</p>
 <blockquote>
-We have asked a simple question: How do output levels predicted by Ricardo’s theory compare to those that are observed in the data? 
+We have asked a simple question: How do output levels predicted by Ricardo’s theory compare to those that are observed in the data?
 Despite all of the  real-world considerations from which Ricardo’s
-theory abstracts, we find that a regression of log output on log predicted output has a (precisely estimated) slope of 0.21. 
+theory abstracts, we find that a regression of log output on log predicted output has a (precisely estimated) slope of 0.21.
 Ricardo’s theory of comparative advantage, is not just mathematically correct and nontrivial; it also has significant explanatory power in the data, at least within the scope of our analysis.
 </blockquote>
 <h2 id="bernhofen-and-brown-2004">Bernhofen and Brown (2004)</h2>
-<p>Costinot and Donaldson (2012) show that, given prices, producitivities are quite good at predicting patterns of specialization.
+<p>Costinot and Donaldson (2012) show that, given prices, productivities are quite good at predicting patterns of specialization.
 This is, we have empirically validated that countries tend to specialize in the good that they are more productive in (lower unitary requirements).
 However, the Ricardian model is <em>mostly</em> about trade.
 The main prediction in that sense is that free trade causes a country to <em>export</em> the good in which it has a comparative advantage.</p>
@@ -1108,7 +1108,7 @@ By 1860, after several military interventions and treaties, Japan had opened its
 </p>
 <p>As the authors say:</p>
 <blockquote>
-The prices of major exports such as products of the silk industry (silk and silkworm eggs) and minor exports such as copper manufactures, sake, and vegetable wax all increased; in some cases they almost doubled. 
+The prices of major exports such as products of the silk industry (silk and silkworm eggs) and minor exports such as copper manufactures, sake, and vegetable wax all increased; in some cases they almost doubled.
 The relative price of key imports such as sugar, cotton cloth, cotton yarn, and iron products displayed substantial declines.
 The increase in the price of rice and legumes may reflect poor weather conditions, and the increase in the price of cotton may stem from the disruption of cotton markets in the wake of the American Civil War.
 </blockquote>
@@ -1133,12 +1133,12 @@ The superscript $f$ denotes the free trade equilibrium.
 From here:
 \begin{align}
 p_x^{f} (x^f-c_x^f) &amp;= p_y^{f} (c_y^f-y^f) \implies \\
-\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) = (c_y^f-y^f) \implies \\
+\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) &amp;= (c_y^f-y^f) \implies \\
 \frac{p_x^{f}}{p_y^f} (x^f-c_x^f) - (c_y^f-y^f) &amp;= 0 \\
-\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) - (c_y^f-y^f) &amp;&lt; \frac{p_x^a}{p_y^a}(x^f-c_x^f) - (c_y^f-y^f) \implies \\
+\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) - (c_y^f-y^f) &amp;&gt; \frac{p_x^a}{p_y^a}(x^f-c_x^f) - (c_y^f-y^f) \implies \\
 \frac{p_x^a}{p_y^a}(x^f-c_x^f) - (c_y^f-y^f) &lt; 0
 \end{align}
-Where $\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) - (c_y^f-y^f) &lt; \frac{p_x^a}{p_y^a}(x^f-c_x^f) - (c_y^f-y^f)$ is true because $\frac{p_x^{f}}{p_y^f} &gt; \frac{p_x^a}{p_y^a}$.</p>
+Where $\frac{p_x^{f}}{p_y^f} (x^f-c_x^f) - (c_y^f-y^f) &gt; \frac{p_x^a}{p_y^a}(x^f-c_x^f) - (c_y^f-y^f)$ is true because $\frac{p_x^{f}}{p_y^f} &gt; \frac{p_x^a}{p_y^a}$.</p>
 <p>The setup in Bernhofen and Brown is a bit more complex because they have more goods and trade may not be balanced.
 In any case, the general conclusion holds: if we evaluate net exports at autarky prices, we should observe a negative value.
 
