--- a/courses/macroeconomics/macro_2/is_lm/index.html
+++ b/courses/macroeconomics/macro_2/is_lm/index.html
@@ -1113,7 +1113,7 @@ r &amp;= \frac{1}{0.4Y - 0.2} = \frac{5}{2Y - 1}
 Y &amp;= \overbrace{C(Y,T)}^{c_0 + c_1(Y-T)} + I(r) + \bar{G} \implies \\
 \mathrm{d}Y &amp;= c_1 \mathrm{d}Y + I^\prime \mathrm{d}r \\
 (1-c_1) \mathrm{d}Y &amp;= I^\prime \mathrm{d}r \\
-\frac{\mathrm{d}r}{\mathrm{d}Y} &amp;= \frac{I^\prime}{(1-c_1)} &lt; 0
+\frac{\mathrm{d}r}{\mathrm{d}Y} &amp;= \frac{1-c_1}{I^\prime} &lt; 0
 \end{align}</p>
 <p>Ainsi, quand $Y$ augmente, $r$ diminue.</p>
 <h3 id="déplacements-de-la-courbe-is">Déplacements de la courbe IS</h3>
