Typo in example

--- a/courses/macroeconomics/macro_2/is_lm/index.html
+++ b/courses/macroeconomics/macro_2/is_lm/index.html
@@ -1166,8 +1166,8 @@ En effet, $\frac{\mathrm{d}Y}{\mathrm{d}G}$ indique de combien $Y$ change quand 
 Nous avons déjà vu que $\frac{\mathrm{d}Y}{\mathrm{d}G} = \frac{1}{1-c_1} &gt; 1$</p>
 <p>Par exemple, imaginons que l&rsquo;économie soit décrite avec les fonctions:
 \begin{align}
-C(Y-T) = c_0 + c_1(Y-T) = 4 + 0.6(Y-3) \\\
-I(r) = \frac{4} \\\
+C(Y-T) = c_0 + c_1(Y-T) = 4 + 0.6(Y-2) \\\
+I(r) = \frac{4}{r} \\\
 Y = C(Y-T) + I(r) + G
 \end{align}</p>
 <p>Ainsi, supposons que l&rsquo;on fixe le taux d&rsquo;intérêt $r=0.4$ et que les dépenses initiales du gouvernement soient $G=8$ avec un niveau d&rsquo;imposition $T=2.$
