Adds IZA link (epidemiological) and publication of Econ Inquiry.

--- a/publication/index.html
+++ b/publication/index.html
@@ -991,6 +991,20 @@
   <a class="btn btn-outline-primary btn-page-header btn-sm" href="/papers/Simone%20Bertoli,%20Melchior%20Clerc,%20Jordan%20Loper,%20Eric%20Roca%20Fernandez%20-%20Migration%20and%20the%20Epidemiological%20Approach:%20Time%20and%20Self-Selection%20into%20Foreign%20Ancestries%20Matter.pdf" >
     Working Paper</a>
 
+  
+  
+  
+    
+  
+  
+  
+  
+  
+    
+  
+  <a class="btn btn-outline-primary btn-page-header btn-sm" href="https://docs.iza.org/dp17356.pdf" target="_blank" rel="noopener">
+    IZA Working Paper</a>
+
 
   </div>
   
