Corects de/dy in mundell-fleming

--- a/courses/macroeconomics/macro_2/mundell-fleming/index.html
+++ b/courses/macroeconomics/macro_2/mundell-fleming/index.html
@@ -976,7 +976,7 @@ En conséquence, si $Y$ augmente, $e$ doit diminuer.</p>
 \begin{align}
 Y &amp;= C(Y-T) + \bar{I} + G + NX(e) \implies \\
 \mathrm{d} Y &amp;= c_1 \mathrm{d}Y + NX&rsquo;(e) \mathrm{d} e \implies \\
-\frac{\mathrm{d} e}{\mathrm{d} Y} &amp;= \frac{1-c_1}{NX^(e)\frac{NX^\prime}{1-c_1}} &lt; 0
+\frac{\mathrm{d} e}{\mathrm{d} Y} &amp;= \frac{1-c_1}{NX^\prime} &lt; 0
 \end{align}</p>
 <p>
 
