--- a/courses/macroeconomics/macro_2/index.html
+++ b/courses/macroeconomics/macro_2/index.html
@@ -852,6 +852,7 @@
     <li><a href="#introduction">Introduction</a></li>
     <li><a href="#à-propos-des-cycles-économiques-business-cycle">À propos des cycles économiques (business cycle)</a></li>
     <li><a href="#prédire-une-crise">Prédire une crise?</a></li>
+    <li><a href="#examen-cc-1">Examen CC-1</a></li>
   </ul>
 </nav>
 
@@ -1038,6 +1039,8 @@ Comme le taux d&rsquo;intérêt augmente avec l&rsquo;activité économique, un 
 <p>Mesure l&rsquo;optimisme des ménages à propos des conditions économiques futures.</p>
 </li>
 </ul>
+<h2 id="examen-cc-1">Examen CC-1</h2>
+<p><a href="/uploads/Examen_CC1-2024.pdf">Épreuve CC-1</a></p>
 
           </div>
 
